--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,13 @@ install:
     - pip install scipy
     - pip install matplotlib
     - pip install h5py
+    - pip install flake8
 
 before_script:
+    # stop the build if there are Python syntax errors or undefined names
+    - flake8 . --count --select=E901,E999,F821,F822,F823 --statistics
+    # exit-zero treates all errors as warnings.  The GitHub editor is 127 chars wide
+    - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - python -c "from keras import backend"
     - git submodule update --init --recursive
 
