--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,13 @@ install:
     - pip install scipy
     - pip install matplotlib
     - pip install h5py
+    - pip install flake8
 
 before_script:
     - python -c "from keras import backend"
     - git submodule update --init --recursive
-
+    # check for undefined names or syntax errors
+    - flake8 riddle/ *.py --count --select=E901,E999,F821,F822,F823 --statistics
+    
 script:
     - PYTHONPATH=$PWD:$PYTHONPATH pytest
